--- a/viewer.html
+++ b/viewer.html
@@ -40,8 +40,8 @@
 </main>
 <script>
     const imageSets = {
-      "sma-p-tra": { label: '単純', totalSlices: 27, padding: 5 },
-      "sma-ce-tra": { label: '単純CT', totalSlices: 32, padding: 5 },
+      "sma-p-tra": { label: '単純CT', totalSlices: 27, padding: 5 },
+      "sma-ce-tra": { label: '造影CT', totalSlices: 32, padding: 5 },
     };
 
     let currentSet = 'sma-p-tra';<!--ここを変えるのを忘れない-->
