--- a/answer.html
+++ b/answer.html
@@ -57,7 +57,7 @@
 </div>
 </section>
 <div class="back-button">
-<a href="https://anjokosei.jp">次へ</a>
+<a href="https://forms.gle/ZefK6YbHJRcxNmmr9">次へ</a>
 </div>
 <script>
     const track = document.querySelector('.carousel-track');
